--- a/public/css/resources.css
+++ b/public/css/resources.css
@@ -98,3 +98,44 @@ html, body {
 .closed {
     color: #ff0000;
 }
+
+.min-input {
+    border: none;
+    border-bottom: 1px solid #757575;
+}
+
+.min-input:focus {
+    outline: none;
+}
+
+.bar {
+    position:relative;
+    display: block;
+    width: 300px;
+}
+.bar:before, .bar:after {
+    content: '';
+    height: 2px;
+    width: 0;
+    bottom: 1px;
+    position: absolute;
+    background: #4D6785;
+    transition: 0.2s ease all;
+}
+
+.bar:before {
+    left: 50%;
+}
+
+.bar:after {
+    right: 50%;
+}
+
+/* active state */
+.min-input:focus ~ .bar:before, .min-input:focus ~ .bar:after {
+  width: 50%;
+}
+
+.group {
+    position: relative;
+}
