--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -270,8 +270,12 @@
                             <option value="maxCredit">Max. Credits</option>
                     <%  } %>
                     </select>
-                    <input id="dirsearch" type="search" name="query" placeholder="Search..." value="<% if(form && form.query) { %><%-form.query%><% } %>" required>
-                    <button class="icon-btn" type="submit"><i class="fas fa-search"></i></button>
+                        <div class="group">
+                            <input class="min-input-sb" id="dirsearch" type="search" name="query" placeholder="Search..." value="<% if(form && form.query) { %><%-form.query%><% } %>" required>
+                            <span class="bar-sb"></span>
+                        </div>
+                        <button class="icon-btn" type="submit"><i class="fas fa-search"></i></button>
+                    
                 </form>
             </div>
         </div>
