--- a/public/css/register.css
+++ b/public/css/register.css
@@ -36,6 +36,11 @@
 
 .register-form .form-input {
     width: 60%;
+    transition: width 0.5s ease;
+}
+
+.register-form .form-input:focus-within {
+    width: 65%;
 }
 
 h1 {
