weird extra i tags at dropdown menu

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -301,13 +301,13 @@
                         <button class="btn btn-primary dropdown-toggle" type="button" id="sortDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sort By:</button>
                         <div class="dropdown-menu" aria-labelledby="sortDropdown">
                             <button id="requirement-asc" class="dropdown-item" type="button">Requirements <i class="fas fa-arrow-up"></i></button>
-                            <button id="requirement-desc" class="dropdown-item" type="button">Requirements <i class="fas fa-arrow-down"></i></i></button>
+                            <button id="requirement-desc" class="dropdown-item" type="button">Requirements <i class="fas fa-arrow-down"></i></button>
                             <button id="number-asc" class="dropdown-item" type="button">Course # <i class="fas fa-arrow-up"></i></button>
-                            <button id="number-desc" class="dropdown-item" type="button">Course # <i class="fas fa-arrow-down"></i></i></button>
+                            <button id="number-desc" class="dropdown-item" type="button">Course # <i class="fas fa-arrow-down"></i></button>
                             <button id="name-asc" class="dropdown-item" type="button">Name <i class="fas fa-arrow-up"></i></button>
-                            <button id="name-desc" class="dropdown-item" type="button">Name <i class="fas fa-arrow-down"></i></i></button>
+                            <button id="name-desc" class="dropdown-item" type="button">Name <i class="fas fa-arrow-down"></i></button>
                             <button id="credits-asc" class="dropdown-item" type="button">Credits <i class="fas fa-arrow-up"></i></button>
-                            <button id="credits-desc" class="dropdown-item" type="button">Credits <i class="fas fa-arrow-down"></i></i></button>
+                            <button id="credits-desc" class="dropdown-item" type="button">Credits <i class="fas fa-arrow-down"></i></button>
                         </div>
                     </span>
                 </div>
