scroller button now dissapeares correctly

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -181,7 +181,7 @@
             <%
             if (results) {
                 if (results.length > 0) { %>
-                       <div class="scroll-down">
+                       <div id="scroller" class="scroll-down">
                             <a data-scroll href="#search-results"><p>View Results</p><i class="fas fa-chevron-down"></i></a>
                         </div>
                     <%
@@ -366,9 +366,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
     <script src="/js/index.js"></script>
     <script src="/js/resources.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@14/dist/smooth-scroll.polyfills.min.js"></script>
-    <script>
-        var scroll = new SmoothScroll('a[href*="#"]');
-    </script> 
+    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@14/dist/smooth-scroll.polyfills.min.js"></script> 
 </body>
 </html>
