fixed bug that caused site to crash when user tried to personalize results without uploading a transcript first

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -484,3 +484,9 @@ input:checked + .slider:before {
     font-size: .7em;
     margin: 0;
 }
+
+.dropdown-item.active, .dropdown-item:active {
+    color: #fff;
+    text-decoration: none;
+    background-color: #13446B;
+}
