--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -179,13 +179,11 @@
                 </div>
             </form>
             <%
-            if (results) {
-                if (results.length > 0) { %>
-                       <div id="scroller" class="scroll-down">
-                            <a data-scroll href="#search-results"><p>View Results</p><i class="fas fa-chevron-down"></i></a>
-                        </div>
-                    <%
-                }
+            if (results && results.length > 0) { %>
+                <div id="scroller" class="scroll-down">
+                    <a><p>View Results</p><i class="fas fa-chevron-down"></i></a>
+                </div>
+            <%
             }
             %>
         </div>
@@ -366,6 +364,5 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
     <script src="/js/index.js"></script>
     <script src="/js/resources.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@14/dist/smooth-scroll.polyfills.min.js"></script> 
 </body>
 </html>
