-added full name information to courses -added error message for personalizing results w/o saved classes -working on fixing bug with personalization -removed login button animation -fixed bug in notification display

--- a/views/pages/course.ejs
+++ b/views/pages/course.ejs
@@ -19,7 +19,15 @@
         <div class="container-fluid">
             <div class="column-left">
                 <div class="class-header">
-                    <span class="header-text"><%= name %></span>
+                    <%
+                    if (fullName) { %>
+                        <span class="header-text" data-toggle="tooltip" data-placement="bottom" title="<%= fullName %>"><%= name %></span>
+                    <%
+                    } else { %>
+                        <span class="header-text"><%= name %></span>
+                    <%
+                    }
+                    %>
                     <% if(courseOpenStatus === 'OPEN') { %>
                     <!-- status: open -->
                     <span class="status open">
