--- a/views/partials/notification.ejs
+++ b/views/partials/notification.ejs
@@ -5,7 +5,7 @@ if (notification) {
     <% } else { %>
         <div class="alert alert-danger alert-dismissible fade show" role="alert">
     <% } %>
-            <%= notification.message %>
+            <%- notification.message %>
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
