--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -40,7 +40,7 @@
     width: 10em;
     height: 1.9em;
     font-size: 1.2em;
-    transition: color .5s ease, background-color .5s ease, width .5s ease;
+    transition: color .5s ease, background-color .5s ease;
     line-height: 1.2em;
     background-color: white;
 }
@@ -48,7 +48,6 @@
 .navform .btn:hover {
     color: #BBDAE0;
     background-color: #13446B;
-    width: 12em;
 }
 
 .navform .btn:active {
