--- a/public/css/resources.css
+++ b/public/css/resources.css
@@ -4,6 +4,10 @@ html, body {
     height: 100%;
 }
 
+.container-fluid {
+    min-height: calc(100vh - 130px);
+}
+
 .btn-primary {
     background-color: #1768AC;
     border: #1768AC;
@@ -157,9 +161,45 @@ html, body {
 
 /* active state */
 .min-input:focus ~ .bar:before, .min-input:focus ~ .bar:after {
-  width: 50%;
+    width: 50%;
 }
 
 .group {
     position: relative;
+}
+
+footer {
+    display: flex;
+    background-color: #13446B;
+    color: #C3DFE4;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 130px;
+}
+
+footer div {
+    margin: 1em 2em;
+}
+
+footer .credits {
+    text-align: center;
+}
+
+footer .credits a {
+    color: white;
+}
+
+footer .links ul {
+    list-style: none;
+}
+
+footer .links ul li h5 {
+    margin: 0;
+    padding: 0;
+}
+
+footer .links a {
+    color: white;
 }
